# memory-analyzer

./: CMakeLists.txt  README.md
cases/: FreeMatcher.cpp  MallocMatcher.cpp  PointerMatcher.cpp
cases/matchers/: ContainerMatcher.cpp  FunctionAllocMatcher.cpp  IMatcher.h  LinkedlistImplMatcher.cpp  MallocMatcher.cpp  NewMatcher.cpp  ReAllocMatcher.cpp  UninitializedMatcher.cpp  VectorImplMatcher.cpp  VectorMatcher.cpp
cases/visitors/: ContainerVisitor.cpp  IASTVisitor.h  VectorVisitor.cpp
control/: FrontendActionWrapper.cpp  FrontendActionWrapper.h  FrontendFactoryWrapper.cpp  FrontendFactoryWrapper.h  Main.cpp
datatypes/: AllocedPointer.h  CastedPointer.h  ImplementedLinkedlist.h  MemberLoc.h  ReAllocedPointer.h  UninitializedPointer.h  VisitedContainer.h  VisitedVector.h  allocedPointer.cpp  allocedPointer.h
parser/: ASTConsumerWrapper.cpp  ASTConsumerWrapper.h  ASTVisitorWrapper.cpp  ASTVisitorWrapper.h
tests/: MallocMatcherTests.cc
view/: MainWindow.cpp  MainWindow.h
